--- a/index.html
+++ b/index.html
@@ -497,9 +497,10 @@
             〒064-0805 北海道札幌市中央区<br class="only_sp">
             南５条西３丁目 美松ビル 4F
           </p>
-          <div class="phone__container">
+          <!--<div class="phone__container">
             <a href="tel:0362645317" class="access__phone">Tel : 00-0000-0000</a>
           </div>
+          -->
         </div>
       </section>
       <section class="area__campaign">
